# mongo2arango

./: .gitignore  README.md  pyproject.toml
mongo2arango/: config.py  dropEdges.py  dryRun.py  indexes.py  initEdges.py  initGraph.py  models.py  mongo2arango_batch_loader.py  mongo2arango_cli.py  returningDryRun.py  testSingle.py  triggerPopulationScripts.py  wetRun.py
mongo2arango/edgeCreationTemplates/: dryRun-template.py  initEdge-template.py  populateEdge-template.py
mongo2arango/graphs/: UserTravelGraph.py
mongo2arango/populationScripts/: LocationCountry.py  OrderLocation.py  ReturningCustomer.py  UserAssignation.py  UserCountry.py  UserOrderAssignation.py  UserOrderAssignationDriver.py  UserOrderLocationCountry.py  UserUserRole.py  createOrder.py  feedbackForDriver.py
mongo2arango/populationScripts/done-tested/: AssignationOrder.py  OrderRoute.py  OrderTravelData.py  UserOrderAssignation.py  UserUserRole.py
utils/: grap-collection-list.py  mongo-to-json.py  splitter.py
